cmake_minimum_required(VERSION 3.10)
project(standard_library_analize)

set(CMAKE_CXX_STANDARD 17)

add_executable(search_algorithm ./src/search_algorithm.cpp)
add_executable(compare_algorithm ./src/compare_algorithm.cpp)
add_executable(counting_algorithm ./src/counting_algorithm.cpp)
add_executable(modifying_sequence_algorithm ./src/modifying_sequence_algorithm.cpp)
add_executable(modifying_sequence_algorithm2 ./src/modifying_sequence_algorithm2.cpp)
add_executable(copy_algorithm ./src/copy_algorithm.cpp)
add_executable(copy_algorithm2 ./src/copy_algorithm2.cpp)
add_executable(move_algorithm ./src/move_algorithm.cpp)
add_executable(replace_algorithm ./src/replace_algorithm.cpp)
add_executable(remove_algorithm ./src/remove_algorithm.cpp)
add_executable(sample_algorithm ./src/sample_algorithm.cpp)
add_executable(calculate_algorithm ./src/calculate_algorithm.cpp)
add_executable(swap_exchange_algorithm ./src/swap_n_exchange_algorithm.cpp)
add_executable(partition_algorithm ./src/partition_algorithm.cpp)
add_executable(sort_algorithm ./src/sort_algorithm.cpp)
add_executable(binary_search_algorithm ./src/binary_search_algorithm.cpp)
add_executable(set_algorithm ./src/set_algorithm.cpp)
add_executable(min_max_algorithm ./src/min_max_algorithm.cpp)
add_executable(numeric_algorithm ./src/numeric_algorithm.cpp)